--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Техномарт</title>
+  <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700|PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
+  <link href="css/normalize.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
   <header>
+    
     <div class="header-top">
       <a>
         <img src="img/logo-small.png" width="220" height="47" alt="Логотип магазина «Техномарт»">
@@ -18,7 +22,7 @@
       </form>
       <a href="#">Закладки:0</a>
       <a href="#">Корзина:0</a>
-      <a href="#">Оформить заказ</a>
+      <a class="order-button" href="#">Оформить заказ</a>
     </div>
     <div class="header-middle">
       <h1>Интернет-магазин<br>строительных материалов<br>и инструментов для ремонта</h1>
@@ -44,35 +48,35 @@
     </nav>
   </header>
   <main>
-    <section>
+    <section class="type-of-product">
       <h2 class="visually-hidden">Виды товара</h2>
       <div class="materials">
         <h4>Материалы</h4>
-        <a href="#">На любой вкус </a>
+        <a class="type-item" href="#">На любой вкус </a>
         <img src="img/icons/icon-materials.svg" width="44" height="65" alt="Материалы">
       </div>
       <div class="tools">
         <h4>Инструмент</h4>
-        <a href="#">На все случаи </a>
+        <a class="type-item" href="#">На все случаи </a>
         <img src="img/icons/icon-tools.svg" width="75" height="61" alt="Инструмент">
       </div>
       <div class="technic">
         <h4>Техника</h4>
-        <a href="#">Для стройки</a>
+        <a class="type-item" href="#">Для стройки</a>
         <img src="img/icons/icon-technic.svg" width="78" height="62" alt="Техника для стройки">
       </div>
       <div class="slider">
         <ul>
           <li>
-            <p>Перфораторы</p>
+            <span>Перфораторы</span>
             <p>Настоящие мужские игрушки</p>
           </li>
           <li>
-            <p>Дрели</p>
+            <span>Дрели</span>
             <p>Соседям на радость!</p>
           </li>
         </ul>
-        <a href="catalog.html">Открыть каталог</a>
+        <a class="red-button" href="catalog.html">Открыть каталог</a>
         <div class="slider-arrows">
           <button type="button" aria-label="стрелка назад"></button>
           <button type="button" aria-label="стрелка вперед"></button>
@@ -84,19 +88,19 @@
       </div>
       <div class="sale">
         <h4>Скидки 50%</h4>
-        <a href="#">На 350 товаров</a>
+        <a class="type-item" href="#">На 350 товаров</a>
         <img src="img/icons/icon-sale.svg" width="59" height="72" alt="Распродажа">
       </div>
       <div class="delivery">
         <h4>Доставка</h4>
-        <a href="#">Бесплатно</a>
+        <a class="type-item" href="#">Бесплатно</a>
         <img src="img/icons/icon-delivery.svg" width="78" height="63" alt="Доставка">
       </div>
     </section>
     <section>
       <div class="popular">
         <h3>Популярные товары:</h3>
-        <a href="#">Все популярные товары</a>
+        <a class="red-button" href="#">Все популярные товары</a>
       </div>
       <div class="popular-items">
         <ul>
@@ -108,11 +112,11 @@
             <p>
               <img src="img/product-3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
             </p>
-            <span>32500 Р.</span>
-            <span>25500 Р.</span>
+            <span class="old-price">32500 Р.</span>
+            <span class="price-button">25500 Р.</span>
             <div class="hover-item">
-              <a href="">купить</a>
-              <a href="">в закладки</a>
+              <a class="buy" href="">купить</a>
+              <a class="in-bookmark" href="">в закладки</a>
             </div>
           </li>
           <li>
@@ -123,11 +127,11 @@
             <p>
               <img src="img/product-1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
             </p>
-            <span>22500 Р.</span>
-            <span>15500 Р.</span>
+            <span class="old-price">22500 Р.</span>
+            <span class="price-button">15500 Р.</span>
             <div class="hover-item">
-              <a href="">купить</a>
-              <a href="">в закладки</a>
+              <a class="buy" href="">купить</a>
+              <a class="in-bookmark" href="">в закладки</a>
             </div>
           </li>
           <li>
@@ -138,11 +142,11 @@
             <p>
               <img src="img/product-2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
             </p>
-            <span>30500 Р.</span>
-            <span>25500 Р.</span>
+            <span class="old-price">30500 Р.</span>
+            <span class="price-button">25500 Р.</span>
             <div class="hover-item">
-              <a href="">купить</a>
-              <a href="">в закладки</a>
+              <a class="buy" href="">купить</a>
+              <a class="in-bookmark" href="">в закладки</a>
             </div>
           </li>
           <li>
@@ -153,10 +157,10 @@
             <p>
               <img src="img/product-1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
             </p>
-            <span>12500 Р.</span>
+            <span class="price-button">12500 Р.</span>
             <div class="hover-item">
-              <a href="">купить</a>
-              <a href="">в закладки</a>
+              <a class="buy" href="">купить</a>
+              <a class="in-bookmark" href="">в закладки</a>
             </div>
           </li>
         </ul>
@@ -165,7 +169,7 @@
     <section>
       <div class="popular">
         <h3>Популярные производители:</h3>
-        <a href="#">Все производители</a>
+        <a class="red-button" href="#">Все производители</a>
       </div>
       <div class="popular-brands">
         <ul>
@@ -212,7 +216,7 @@
         </ul>
       </div>
     </section>
-    <section>
+    <section class="features-service">
       <div class="service">
         <h3>Сервисы</h3>
         <p>Хороший интернет-магазин отличается от плохого не только ценами!<br>
@@ -220,33 +224,33 @@
       </div>
       <ul>
         <li>
-          <a href="">Доставка</a>
+          <a class="servise-title" href="">Доставка</a>
         </li>
         <li>
-          <a href="">Гарантия</a>
+          <a class="servise-title" href="">Гарантия</a>
         </li>
         <li>
-          <a href="">Кредит</a>
+          <a class="servise-title" href="">Кредит</a>
         </li>
       </ul>
       <div class="info-delivery">
-        <p>Доставка</p>
+        <span>Доставка</span>
         <p>Мы с удовольствием доставим ваш товар прямо<br>к вашему подъезду совершенно бесплатно!<br>Ведь мы
           неплохо
           заработаем,<br>поднимая его на ваш этаж!</p>
       </div>
       <div class="info-guarantees">
-        <p>Гарантия</p>
+        <span>Гарантия</span>
         <p>Если купленный у нас товар поломается или заискрит,<br>
           а также в случае пожара, спровоцированного его возгоранием, вы всегда можете быть уверены в нашей гарантии. Мы
           обменяем сгоревший товар на новый.<br>
           Дом уж восстановите как-нибудь сами.</p>
       </div>
       <div class="info-credit">
-        <p>Кредит</p>
+        <span>Кредит</span>
         <p>Залезть в долговую яму стало проще!<br>
           Кредитные консультанты придут вам на помощь.</p>
-        <a href="#">Отправить заявку</a>
+        <a class="red-button" href="#">Отправить заявку</a>
       </div>
     </section>
     <div class="about-us">
