--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
             </p>
             <span class="price line-throuh-price">32500 Р.</span>
             <span class="price price-label">25500 Р.</span>
-            <div class="hover-item">
-              <a class="hover-item-card buy-button" href="">купить</a>
-              <a class="hover-item-card bookmark-button" href="">в закладки</a>
+            <div class="action-item">
+              <a class="action-item-card buy-button" href="">купить</a>
+              <a class="action-item-card bookmark-button" href="">в закладки</a>
             </div>
           </li>
           <li class="catalog-item">
@@ -135,9 +135,9 @@
             </p>
             <span class="price line-throuh-price">22500 Р.</span>
             <span class="price price-label">15500 Р.</span>
-            <div class="hover-item">
-              <a class="hover-item-card buy-button" href="">купить</a>
-              <a class="hover-item-card bookmark-button" href="">в закладки</a>
+            <div class="action-item">
+              <a class="action-item-card buy-button" href="">купить</a>
+              <a class="action-item-card bookmark-button" href="">в закладки</a>
             </div>
           </li>
           <li class="catalog-item">
@@ -150,9 +150,9 @@
             </p>
             <span class="price line-throuh-price">30500 Р.</span>
             <span class="price price-label">25500 Р.</span>
-            <div class="hover-item">
-              <a class="hover-item-card buy-button" href="">купить</a>
-              <a class="hover-item-card bookmark-button" href="">в закладки</a>
+            <div class="action-item">
+              <a class="action-item-card buy-button" href="">купить</a>
+              <a class="action-item-card bookmark-button" href="">в закладки</a>
             </div>
           </li>
           <li class="catalog-item">
@@ -164,9 +164,9 @@
               <img src="img/product-1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
             </p>
             <span class="price price-label">12500 Р.</span>
-            <div class="hover-item">
-              <a class="hover-item-card buy-button" href="">купить</a>
-              <a class="hover-item-card bookmark-button" href="">в закладки</a>
+            <div class="action-item">
+              <a class="action-item-card buy-button" href="">купить</a>
+              <a class="action-item-card bookmark-button" href="">в закладки</a>
             </div>
           </li>
         </ul>
