--- a/catalog.html
+++ b/catalog.html
@@ -70,7 +70,7 @@
             <div class="items-filter">
                 <h2 class="visually-hidden">Фильтр товаров</h2>
                 <p class="filter-title">Фильтр:</p>
-                <form method="get" action="https://echo.htmlacademy.ru">
+                <form class="filter" method="get" action="https://echo.htmlacademy.ru">
                     <fieldset>
                         <legend>Цена:</legend>
                         <div class="range-slider">
@@ -156,10 +156,10 @@
                             </p>
                             <span class="price line-throuh-price">22500 Р.</span>
                             <span class="price price-label">15500 Р.</span>
-                            <div class="hover-item">
-                                <a class="hover-item-card buy-button" href="">купить</a>
-                                <a class="hover-item-card bookmark-button" href="">в закладки</a>
-                            </div>
+                            <div class="action-item">
+                                <a class="action-item-card buy-button" href="">купить</a>
+                                <a class="action-item-card bookmark-button" href="">в закладки</a>
+                              </div>
                         </li>
                         <li class="catalog-item">
                             <h3>
@@ -171,10 +171,10 @@
                             </p>
                             <span class="price line-throuh-price">30500 Р.</span>
                             <span class="price price-label">25500 Р.</span>
-                            <div class="hover-item">
-                                <a class="hover-item-card buy-button" href="">купить</a>
-                                <a class="hover-item-card bookmark-button" href="">в закладки</a>
-                            </div>
+                            <div class="action-item">
+                                <a class="action-item-card buy-button" href="">купить</a>
+                                <a class="action-item-card bookmark-button" href="">в закладки</a>
+                              </div>
                         </li>
                         <li class="catalog-item">
                             <h3>
@@ -185,10 +185,10 @@
                                 <img src="img/product-1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
                             </p>
                             <span class="price price-label">12500 Р.</span>
-                            <div class="hover-item">
-                                <a class="hover-item-card buy-button" href="">купить</a>
-                                <a class="hover-item-card bookmark-button" href="">в закладки</a>
-                            </div>
+                            <div class="action-item">
+                                <a class="action-item-card buy-button" href="">купить</a>
+                                <a class="action-item-card bookmark-button" href="">в закладки</a>
+                              </div>
                         </li>
                         <li class="catalog-item">
                             <h3>
@@ -200,10 +200,10 @@
                             </p>
                             <span class="price line-throuh-price">22500 Р.</span>
                             <span class="price price-label">15500 Р.</span>
-                            <div class="hover-item">
-                                <a class="hover-item-card buy-button" href="">купить</a>
-                                <a class="hover-item-card bookmark-button" href="">в закладки</a>
-                            </div>
+                            <div class="action-item">
+                                <a class="action-item-card buy-button" href="">купить</a>
+                                <a class="action-item-card bookmark-button" href="">в закладки</a>
+                              </div>
                         </li>
                         <li class="catalog-item">
                             <h3>
@@ -215,10 +215,10 @@
                             </p>
                             <span class="price line-throuh-price">30500 Р.</span>
                             <span class="price price-label">25500 Р.</span>
-                            <div class="hover-item">
-                                <a class="hover-item-card buy-button" href="">купить</a>
-                                <a class="hover-item-card bookmark-button" href="">в закладки</a>
-                            </div>
+                            <div class="action-item">
+                                <a class="action-item-card buy-button" href="">купить</a>
+                                <a class="action-item-card bookmark-button" href="">в закладки</a>
+                              </div>
                         </li>
                         <li class="catalog-item">
                             <h3>
@@ -229,10 +229,10 @@
                                 <img src="img/product-1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
                             </p>
                             <span class="price price-label">12500 Р.</span>
-                            <div class="hover-item">
-                                <a class="hover-item-card buy-button" href="">купить</a>
-                                <a class="hover-item-card bookmark-button" href="">в закладки</a>
-                            </div>
+                            <div class="action-item">
+                                <a class="action-item-card buy-button" href="">купить</a>
+                                <a class="action-item-card bookmark-button" href="">в закладки</a>
+                              </div>
                         </li>
                         <li class="catalog-item">
                             <h3>
@@ -244,10 +244,10 @@
                             </p>
                             <span class="price line-throuh-price">22500 Р.</span>
                             <span class="price price-label">15500 Р.</span>
-                            <div class="hover-item">
-                                <a class="hover-item-card buy-button" href="">купить</a>
-                                <a class="hover-item-card bookmark-button" href="">в закладки</a>
-                            </div>
+                            <div class="action-item">
+                                <a class="action-item-card buy-button" href="">купить</a>
+                                <a class="action-item-card bookmark-button" href="">в закладки</a>
+                              </div>
                         </li>
                         <li class="catalog-item">
                             <h3>
@@ -259,10 +259,10 @@
                             </p>
                             <span class="price line-throuh-price">30500 Р.</span>
                             <span class="price price-label">25500 Р.</span>
-                            <div class="hover-item">
-                                <a class="hover-item-card buy-button" href="">купить</a>
-                                <a class="hover-item-card bookmark-button" href="">в закладки</a>
-                            </div>
+                            <div class="action-item">
+                                <a class="action-item-card buy-button" href="">купить</a>
+                                <a class="action-item-card bookmark-button" href="">в закладки</a>
+                              </div>
                         </li>
                         <li class="catalog-item">
                             <h3>
@@ -273,10 +273,10 @@
                                 <img src="img/product-1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
                             </p>
                             <span class="price price-label">12500 Р.</span>
-                            <div class="hover-item">
-                                <a class="hover-item-card buy-button" href="">купить</a>
-                                <a class="hover-item-card bookmark-button" href="">в закладки</a>
-                            </div>
+                            <div class="action-item">
+                                <a class="action-item-card buy-button" href="">купить</a>
+                                <a class="action-item-card bookmark-button" href="">в закладки</a>
+                              </div>
                         </li>
                     </ul>
                 </div>
