--- a/catalog.html
+++ b/catalog.html
@@ -31,9 +31,9 @@
                 <a href="tel:+78125550555">+7 (812) 555-05-55</a>
                 <p class="header-info-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
             </div>
-            <div class="account">
+            <div class="header-account">
                 <div class="account-name">
-                    <a class="account-link" href="#">Равшан Джамшутович</a>
+                    <a class="account-link-name" href="#">Равшан Джамшутович</a>
                     <a href="index.html" aria-label="Выйти из аккаунта"></a>
                 </div>
                 <div class="account-data">
@@ -43,7 +43,7 @@
             </div>
         </div>
         <nav class="header-navigation">
-            <ul>
+            <ul class="site-navigation">
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="#">Компания</a></li>
                 <li><a href="#">Каталог</a></li>
@@ -67,7 +67,7 @@
         </ul>
         <section>
             <p class="caption catalog-caption">Перфораторы</p>
-            <div class="items-filter">
+            <div class="filter">
                 <h2 class="visually-hidden">Фильтр товаров</h2>
                 <p class="filter-title">Фильтр:</p>
                 <form class="filter" method="get" action="https://echo.htmlacademy.ru">
@@ -133,7 +133,7 @@
                     </button>
                 </form>
             </div>
-            <div class="items-container">
+            <div class="catalog">
                 <div class="sort-row">
                     <p>Сортировка:</p>
                     <ul class="sort-row-list">
@@ -290,7 +290,7 @@
         </section>
         <section class="info-article-container product-info-article">
             <h2 class="visually-hidden">Информация о перфораторах</h2>
-            <h3>Пара слов о перфораторах</h3>
+            <p class="caption">Пара слов о перфораторах</p>
             <p class="service-desc">Перфоратор — универсальный строительный инструмент. Предназначен для сверления и
                 долбления отверстий в
                 кирпиче, бетоне и камне.
@@ -302,44 +302,44 @@
     </main>
     <footer class="main-footer">
         <div class="footer-navigation-container">
-            <div class="footer-first-line-wrapper">
-                <a>
-                    <img src="img/logo-big.png" width="220" height="68" alt="Логотип магазина «Техномарт»">
-                </a>
-                <ul class="footer-list footer-navigation-list">
-                    <li><a href="#">Компания</a></li>
-                    <li><a href="#">Новости</a></li>
-                    <li><a href="catalog.html">Каталог</a></li>
-                    <li><a href="#">Доставка</a></li>
-                    <li><a href="#">Контакты</a></li>
-                </ul>
-            </div>
-            <div class="footer-second-line-wrapper">
-                <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-                <a class="footer-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
-                <ul class="footer-list footer-service-list">
-                    <li><a href="#">Материалы</a></li>
-                    <li><a href="#">Техника</a></li>
-                    <li><a href="#">Инструмент</a></li>
-                    <li><a href="#">Спецпредложения</a></li>
-                </ul>
-            </div>
+          <div class="footer-first-line-wrapper">
+            <a>
+              <img src="img/logo-big.png" width="220" height="68" alt="Логотип магазина «Техномарт»">
+            </a>
+            <ul class="footer-list footer-navigation-list">
+              <li><a href="#">Компания</a></li>
+              <li><a href="#">Новости</a></li>
+              <li><a href="catalog.html">Каталог</a></li>
+              <li><a href="#">Доставка</a></li>
+              <li><a href="#">Контакты</a></li>
+            </ul>
+          </div>
+          <div class="footer-second-line-wrapper">
+            <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+            <a class="footer-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
+            <ul class="footer-list footer-service-list">
+              <li><a href="#">Материалы</a></li>
+              <li><a href="#">Техника</a></li>
+              <li><a href="#">Инструмент</a></li>
+              <li><a href="#">Спецпредложения</a></li>
+            </ul>
+          </div>
         </div>
         <div class="footer-aside">
-            <p>&copy; 2010–2019 Компания «Техномарт»<br>Все права защищены</p>
-            <ul class="footer-list footer-social-list">
-                <li class="social-list-item"><a href="#" aria-label="Вконтакте"></a></li>
-                <li class="social-list-item"><a href="#" aria-label="Фейсбук"></a></li>
-                <li class="social-list-item"><a href="#" aria-label="Инстаграм"></a></li>
-            </ul>
-            <div class="footer-contacts">
-                <p>Обратная связь:<br>
-                    <a href="#">mail@htmlacademy.ru</a></p>
-                <p>Разработано —<br>
-                    <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
-            </div>
+          <p>&copy; 2010–2019 Компания «Техномарт»<br>Все права защищены</p>
+          <ul class="footer-list footer-social-list">
+            <li class="social-item"><a href="#" aria-label="Вконтакте"></a></li>
+            <li class="social-item"><a href="#" aria-label="Фейсбук"></a></li>
+            <li class="social-item"><a href="#" aria-label="Инстаграм"></a></li>
+          </ul>
+          <div class="footer-contacts">
+            <p>Обратная связь:<br>
+              <a href="#">mail@htmlacademy.ru</a></p>
+            <p>Разработано —<br>
+              <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
+          </div>
         </div>
-    </footer>
+      </footer>
     <div class="modal modal-cart-success">
         <p>Товар добавлен в корзину!</p>
         <div class="modal-cart-buttons">
